--- a/index.html
+++ b/index.html
@@ -5,6 +5,146 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body></body>
+
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__list">
+          <li class="header__list-item">
+            <a href="" class="header__list-item-link"></a>
+          </li>
+          <li class="header__list-item">
+            <a href="" class="header__list-item-link"></a>
+          </li>
+          <li class="header__list-item">
+            <a href="" class="header__list-item-link"></a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="header__logo logo">
+        <img src="./images/logo-black.svg" alt="Логотип" class="header__logo-img">
+      </div>
+
+      <address class="contacts">
+        <a href="mailto:" class="contacts__link contacts__link-tel"></a>
+        <a href="tel:" class="contacts__link contacts__link-mail"></a>
+        <p class="contacts__address"></p>
+      </address>
+    </header>
+
+    <main class="main">
+      <section class="section cover">
+        <h1 class="cover__heading">
+          <span class="cover__heading-left"></span>
+          <span class="cover__heading-center"></span>
+          <span class="cover__heading-right"></span>
+        </h1>
+
+        <div class="cover__subline">
+          <p class="cover__subline-text"></p>
+
+          <button class="cover__subline-bet"></button>
+        </div>
+
+        <div class="overlay"></div>
+      </section>
+      
+
+      <section class="section lots">
+        <h2 class="lots__heading"></h2>
+
+        <ul class="lots__list">
+          <li class="lots__list-item">
+            <article class="lots__list-item-lot">
+              <a href="" class="lot__heading"></a>
+              <p class="lot__description"></p>
+            </article>
+
+            <div class="overlay"></div>
+          </li>
+
+          <li class="lots__list-item">
+            <article class="lots__list-item-lot">
+              <a href="" class="lot__heading"></a>
+              <p class="lot__description"></p>
+            </article>
+
+            <div class="overlay"></div>
+          </li>
+
+          <li class="lots__list-item">
+            <article class="lots__list-item-lot">
+              <a href="" class="lot__heading"></a>
+              <p class="lot__description"></p>
+            </article>
+
+            <div class="overlay"></div>
+          </li>
+        </ul>
+        
+        <a href="" class="lots__show-more"></a>
+      </section>
+
+      <section class="section about">
+        <div class="about__logo logo">
+          <img src="./images/logo-white.svg" alt="Логотип" class="about__logo-img">
+        </div>
+
+        <div class="about__description">
+          <h2 class="about__heading"></h2>
+
+          <p class="about__text"></p>
+          <p class="about__text"></p>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <address class="contacts">
+        <a href="mailto:" class="contacts__link contacts__link-tel"></a>
+        <a href="tel:" class="contacts__link contacts__link-mail"></a>
+        <p class="contacts__address"></p>
+      </address>
+
+      <nav class="footer__menu">
+        <ul class="footer__list">
+          <li class="footer__list-item">
+            <a href="" class="footer__list-item-link"></a>
+          </li>
+          <li class="footer__list-item">
+            <a href="" class="footer__list-item-link"></a>
+          </li>
+          <li class="footer__list-item">
+            <a href="" class="footer__list-item-link"></a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="footer__socials">
+        <ul class="footer__socials-list">
+          <li class="footer__socials-list-item">
+            <a href="" class="footer__socials-link">
+              <img src="./images/yt.svg" alt="иконка youtube" class="socials-link-img socials-link-img__youtube">
+            </a>
+          </li>
+          <li class="footer__socials-list-item">
+            <a href="" class="footer__socials-link">
+              <img src="./images/vk.svg" alt="иконка vk" class="socials-link-img socials-link-img__vk">
+            </a>
+          </li>
+          <li class="footer__socials-list-item">
+            <a href="" class="footer__socials-link">
+              <img src="./images/pinterest.svg" alt="иконка pinterest" class="socials-link-img socials-link-img__pinterest">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
