добавлен контент (содержимое) страницы в index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
 
     <link rel="stylesheet" href="./fonts/fonts.css">
@@ -16,13 +16,15 @@
       <nav class="header__menu">
         <ul class="header__list">
           <li class="header__list-item">
-            <a href="" class="header__list-item-link"></a>
+            <a href="" class="header__list-item-link">главная</a>
           </li>
+
           <li class="header__list-item">
-            <a href="" class="header__list-item-link"></a>
+            <a href="" class="header__list-item-link">посмотреть лоты</a>
           </li>
+
           <li class="header__list-item">
-            <a href="" class="header__list-item-link"></a>
+            <a href="" class="header__list-item-link">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -32,24 +34,24 @@
       </div>
 
       <address class="contacts">
-        <a href="mailto:" class="contacts__link contacts__link-tel"></a>
-        <a href="tel:" class="contacts__link contacts__link-mail"></a>
-        <p class="contacts__address"></p>
+        <a href="tel:+99995555555" class="contacts__link contacts__link-mail">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" class="contacts__link contacts__link-tel">info@sobaka.ge</a>
+        <p class="contacts__address">наб. Принсенграхт 263-<br>265, Амстердам</p>
       </address>
     </header>
 
     <main class="main">
       <section class="section cover">
         <h1 class="cover__heading">
-          <span class="cover__heading-left"></span>
-          <span class="cover__heading-center"></span>
-          <span class="cover__heading-right"></span>
+          <span class="cover__heading-left">оно</span>
+          <span class="cover__heading-center">тебе</span>
+          <span class="cover__heading-right">надо</span>
         </h1>
 
         <div class="cover__subline">
-          <p class="cover__subline-text"></p>
+          <p class="cover__subline-text">Аукцион вещей, вкоторые никто не верил</p>
 
-          <button class="cover__subline-bet"></button>
+          <button class="cover__subline-bet">Сделать ставку</button>
         </div>
 
         <div class="overlay"></div>
@@ -57,13 +59,14 @@
       
 
       <section class="section lots">
-        <h2 class="lots__heading"></h2>
+        <h2 class="lots__heading">Лоты</h2>
 
         <ul class="lots__list">
           <li class="lots__list-item">
             <article class="lots__list-item-lot">
-              <a href="" class="lot__heading"></a>
-              <p class="lot__description"></p>
+              <a href="" class="lot__heading">Фильм режиссёра, который бросил киношколу</a>
+
+              <p class="lot__description">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
             </article>
 
             <div class="overlay"></div>
@@ -71,8 +74,9 @@
 
           <li class="lots__list-item">
             <article class="lots__list-item-lot">
-              <a href="" class="lot__heading"></a>
-              <p class="lot__description"></p>
+              <a href="" class="lot__heading">Книга, где описан один скучный день из жизни рекламного агента</a>
+
+              <p class="lot__description">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
             </article>
 
             <div class="overlay"></div>
@@ -80,15 +84,16 @@
 
           <li class="lots__list-item">
             <article class="lots__list-item-lot">
-              <a href="" class="lot__heading"></a>
-              <p class="lot__description"></p>
+              <a href="" class="lot__heading">Картина, которую повторит даже 5-летний сын маминой подруги</a>
+
+              <p class="lot__description">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
             </article>
 
             <div class="overlay"></div>
           </li>
         </ul>
         
-        <a href="" class="lots__show-more"></a>
+        <a href="" class="lots__show-more">посмотреть больше</a>
       </section>
 
       <section class="section about">
@@ -97,31 +102,35 @@
         </div>
 
         <div class="about__description">
-          <h2 class="about__heading"></h2>
+          <h2 class="about__heading">Об аукционе</h2>
 
-          <p class="about__text"></p>
-          <p class="about__text"></p>
+          <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+
+          <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
         </div>
       </section>
     </main>
 
     <footer class="footer">
       <address class="contacts">
-        <a href="mailto:" class="contacts__link contacts__link-tel"></a>
-        <a href="tel:" class="contacts__link contacts__link-mail"></a>
-        <p class="contacts__address"></p>
+        <a href="tel:+99995555555" class="contacts__link contacts__link-mail">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" class="contacts__link contacts__link-tel">info@sobaka.ge</a>
+        <p class="contacts__address">наб. Принсенграхт 263-<br>265, Амстердам</p>
       </address>
 
       <nav class="footer__menu">
         <ul class="footer__list">
           <li class="footer__list-item">
-            <a href="" class="footer__list-item-link"></a>
+            <a href="" class="footer__list-item-link">главная</a>
           </li>
+
           <li class="footer__list-item">
-            <a href="" class="footer__list-item-link"></a>
+            <a href="" class="footer__list-item-link">посмотреть лоты</a>
           </li>
+
           <li class="footer__list-item">
-            <a href="" class="footer__list-item-link"></a>
+            <a href="" class="footer__list-item-link">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -133,11 +142,13 @@
               <img src="./images/yt.svg" alt="иконка youtube" class="socials-link-img socials-link-img__youtube">
             </a>
           </li>
+
           <li class="footer__socials-list-item">
             <a href="" class="footer__socials-link">
               <img src="./images/vk.svg" alt="иконка vk" class="socials-link-img socials-link-img__vk">
             </a>
           </li>
+
           <li class="footer__socials-list-item">
             <a href="" class="footer__socials-link">
               <img src="./images/pinterest.svg" alt="иконка pinterest" class="socials-link-img socials-link-img__pinterest">
