--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
 
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
 
   <body>
     <header class="header">
       <nav class="header__menu">
         <ul class="header__list">
-          <li class="header__list-item">
+          <li class="header__list-item active">
             <a href="" class="header__list-item-link">главная</a>
           </li>
 
@@ -30,17 +30,17 @@
       </nav>
 
       <div class="header__logo logo">
-        <img src="./images/logo-black.svg" alt="Логотип" class="header__logo-img">
+        <img src="images/logo-black.svg" alt="Логотип" class="header__logo-img">
       </div>
 
       <address class="contacts">
-        <a href="tel:+99995555555" class="contacts__link contacts__link-mail">+9 999 555 5555</a>
+        <a href="tel:+99995555555" class="contacts__link contacts__link-mail">+9 999 555 5555</a><br>
         <a href="mailto:info@sobaka.ge" class="contacts__link contacts__link-tel">info@sobaka.ge</a>
         <p class="contacts__address">наб. Принсенграхт 263-<br>265, Амстердам</p>
       </address>
     </header>
 
-    <main class="main">
+    <main>
       <section class="section cover">
         <h1 class="cover__heading">
           <span class="cover__heading-left">оно</span>
@@ -98,7 +98,7 @@
 
       <section class="section about">
         <div class="about__logo logo">
-          <img src="./images/logo-white.svg" alt="Логотип" class="about__logo-img">
+          <img src="images/logo-white.svg" alt="Логотип" class="about__logo-img">
         </div>
 
         <div class="about__description">
@@ -114,14 +114,14 @@
 
     <footer class="footer">
       <address class="contacts">
-        <a href="tel:+99995555555" class="contacts__link contacts__link-mail">+9 999 555 5555</a>
+        <a href="tel:+99995555555" class="contacts__link contacts__link-mail">+9 999 555 5555</a><br>
         <a href="mailto:info@sobaka.ge" class="contacts__link contacts__link-tel">info@sobaka.ge</a>
         <p class="contacts__address">наб. Принсенграхт 263-<br>265, Амстердам</p>
       </address>
 
       <nav class="footer__menu">
         <ul class="footer__list">
-          <li class="footer__list-item">
+          <li class="footer__list-item active">
             <a href="" class="footer__list-item-link">главная</a>
           </li>
 
@@ -139,19 +139,19 @@
         <ul class="footer__socials-list">
           <li class="footer__socials-list-item">
             <a href="" class="footer__socials-link">
-              <img src="./images/yt.svg" alt="иконка youtube" class="socials-link-img socials-link-img__youtube">
+              <img src="images/yt.svg" alt="иконка youtube" class="socials-link-img socials-link-img__youtube">
             </a>
           </li>
 
           <li class="footer__socials-list-item">
             <a href="" class="footer__socials-link">
-              <img src="./images/vk.svg" alt="иконка vk" class="socials-link-img socials-link-img__vk">
+              <img src="images/vk.svg" alt="иконка vk" class="socials-link-img socials-link-img__vk">
             </a>
           </li>
 
           <li class="footer__socials-list-item">
             <a href="" class="footer__socials-link">
-              <img src="./images/pinterest.svg" alt="иконка pinterest" class="socials-link-img socials-link-img__pinterest">
+              <img src="images/pinterest.svg" alt="иконка pinterest" class="socials-link-img socials-link-img__pinterest">
             </a>
           </li>
         </ul>
