--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </ul>
       </nav>
 
-      <div class="header__logo logo">
+      <a class="header__logo logo">
         <img src="images/logo-black.svg" alt="Логотип" class="header__logo-img">
-      </div>
+      </a>
 
       <address class="header__contacts contacts">
         <a href="tel:+99995555555" class="contacts__link contacts__link-mail">+9 999 555 5555</a><br>
@@ -41,30 +41,30 @@
     </header>
 
     <main>
-      <section class="section cover">
+      <section class="cover">
         <h1 class="cover__heading">
-          <span class="cover__heading-span">о<span class="cover__heading-spacing-big">н</span>о</span>
+          <span class="cover__heading-span">о<span class="cover__heading-spacing-extended">н</span>о</span>
 
-          <span class="cover__heading-span cover__heading-center">те<span class="cover__heading-spacing-big">б</span>е</span>
+          <span class="cover__heading-span cover__heading-center">те<span class="cover__heading-spacing-extended">б</span>е</span>
           
-          <span class="cover__heading-span cover__heading-right"><span class="cover__heading-spacing-big">н</span>ад<span class="cover__heading-spacing-zero">о</span></span>
+          <span class="cover__heading-span cover__heading-right"><span class="cover__heading-spacing-extended">н</span>ад<span class="cover__heading-spacing-zero">о</span></span>
         </h1>
 
         <div class="cover__subline">
           <p class="cover__subline-text">Аукцион вещей, вкоторые никто не верил</p>
 
-          <button class="cover__subline-bet button">Сделать ставку</button>
+          <button class="button">Сделать ставку</button>
         </div>
 
         <div class="overlay"></div>
       </section>
       
 
-      <section class="section lots">
+      <section class="lots">
         <h2 class="section__heading lots__heading">Лоты</h2>
 
         <ul class="lots__list">
-          <li class="lots__list-item lots__andersson">
+          <li class="lots__list-item lots__film">
             <article class="lots__list-item-lot">
               <h3>
                 <a href="" class="lot__heading">Фильм режиссёра, который бросил киношколу</a>
@@ -76,7 +76,7 @@
             <div class="overlay"></div>
           </li>
 
-          <li class="lots__list-item  lots__ulisses">
+          <li class="lots__list-item  lots__book">
             <article class="lots__list-item-lot">
               <h3>
                 <a href="" class="lot__heading">Книга, где описан один скучный день из жизни рекламного агента</a>
@@ -88,7 +88,7 @@
             <div class="overlay"></div>
           </li>
 
-          <li class="lots__list-item lots__kandinsky">
+          <li class="lots__list-item lots__picture">
             <article class="lots__list-item-lot">
               <h3>
                 <a href="" class="lot__heading">Картина, которую повторит даже 5-летний сын<br>маминой подруги</a>
@@ -104,10 +104,10 @@
         <a href="" class="lots__show-more">посмотреть больше</a>
       </section>
 
-      <section class="section about">
-        <div class="about__logo">
+      <section class="about">
+        <a class="about__logo logo">
           <img src="images/logo-white.svg" alt="Логотип" class="logo-img">
-        </div>
+        </a>
 
         <div class="about__description">
           <h2 class="section__heading about__heading">Об аукционе</h2>
@@ -115,7 +115,7 @@
           <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
 
           <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+          на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
         </div>
       </section>
     </main>
@@ -143,25 +143,25 @@
         </ul>
       </nav>
 
-        <ul class="footer__socials-list">
-          <li class="footer__socials-list-item">
-            <a href="" class="footer__socials-link">
-              <img src="images/yt.svg" alt="иконка youtube" class="socials-link-img socials-link-img__youtube">
-            </a>
-          </li>
+      <ul class="footer__socials-list">
+        <li class="footer__socials-list-item">
+          <a href="" class="footer__socials-link">
+            <img src="images/yt.svg" alt="иконка youtube">
+          </a>
+        </li>
 
-          <li class="footer__socials-list-item">
-            <a href="" class="footer__socials-link">
-              <img src="images/vk.svg" alt="иконка vk" class="socials-link-img socials-link-img__vk">
-            </a>
-          </li>
+        <li class="footer__socials-list-item">
+          <a href="" class="footer__socials-link">
+            <img src="images/vk.svg" alt="иконка vk">
+          </a>
+        </li>
 
-          <li class="footer__socials-list-item">
-            <a href="" class="footer__socials-link">
-              <img src="images/pinterest.svg" alt="иконка pinterest" class="socials-link-img socials-link-img__pinterest">
-            </a>
-          </li>
-        </ul>
+        <li class="footer__socials-list-item">
+          <a href="" class="footer__socials-link">
+            <img src="images/pinterest.svg" alt="иконка pinterest">
+          </a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
