--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
 
-    <link rel="stylesheet" href="fonts/fonts.css">
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
 
   <body>
@@ -30,7 +30,7 @@
       </nav>
 
       <a class="header__logo logo">
-        <img src="images/logo-black.svg" alt="Логотип" class="header__logo-img">
+        <img src="./images/logo-black.svg" alt="Логотип" class="header__logo-img">
       </a>
 
       <address class="header__contacts contacts">
@@ -51,7 +51,7 @@
         </h1>
 
         <div class="cover__subline">
-          <p class="cover__subline-text">Аукцион вещей, вкоторые никто не верил</p>
+          <p class="cover__subline-text">Аукцион вещей, в которые никто не верил</p>
 
           <button class="button">Сделать ставку</button>
         </div>
@@ -106,7 +106,7 @@
 
       <section class="about">
         <a class="about__logo logo">
-          <img src="images/logo-white.svg" alt="Логотип" class="logo-img">
+          <img src="./images/logo-white.svg" alt="Логотип" class="about__logo-img">
         </a>
 
         <div class="about__description">
