--- a/index.html
+++ b/index.html
@@ -161,23 +161,25 @@
         <div class="about__description">
           <h2 class="section__heading about__heading">Об аукционе</h2>
 
-          <p class="about__text">
-            Здесь вы не встретите очередное пафосное собрание невероятно
-            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
-            один аукцион. Потому что кому нужен дневник девочки-подростка или
-            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
-            странные вещи, созданные любителями?
-          </p>
+          <div class="about__text">
+            <p class="about__text-item">
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+              один аукцион. Потому что кому нужен дневник девочки-подростка или
+              картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+              странные вещи, созданные любителями?
+            </p>
 
-          <p class="about__text">
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря
-            на&nbsp;критику, кажущуюся простоту или сложность, сейчас без этих
-            лотов невозможно представить современную культуру. Когда в эти вещи
-            не верил никто, продолжали верить их создатели. И сейчас эти лоты
-            стали культовыми.
-          </p>
+            <p class="about__text-item">
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+              Когда-то они казались просто неудачными. Но, несмотря
+              на&nbsp;критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти вещи
+              не верил никто, продолжали верить их создатели. И сейчас эти лоты
+              стали культовыми.
+            </p>
+          </div>
         </div>
       </section>
     </main>
